...
    var isUploadingImage by remember { mutableStateOf(false) }

    // Estados para los dropdowns
    var genreExpanded by remember { mutableStateOf(false) }
    var platformExpanded by remember { mutableStateOf(false) }

    val genres = listOf("ROCK", "POP", "ELECTRONICA", "Urbano",  "Jazz", "Reggaeton", "Indie")
    val platforms = listOf("Joinnus", "Teleticket", "Ticketmaster")
    
    // Mapa de imágenes de plataformas
    val platformImages = mapOf(
        "Teleticket" to "https://yt3.googleusercontent.com/E4LWQc_szds7dK-uBf1MhIS_udkQDvvy-EMbJn9ei_tmjLo67QHtbNxN9K2kKcCQoKUG0Bpon60=s900-c-k-c0x00ffffff-no-rj",
        "Ticketmaster" to "https://yt3.googleusercontent.com/nTRGvdqj_uPP1sXy2K52SHlxa8cd1d4_Tfe2h_q1qGEiEtAAtU35Fr-R2yw2JbmEgtRjchoQtA=s900-c-k-c0x00ffffff-no-rj",
        "Joinnus" to "https://cdn-blog.joinnus.com/blog/wp-content/uploads/2018/12/19185753/joinnus-logo.jpg"
...
            )
            OutlinedTextField(
                value = title,
                onValueChange = { title = it },
                placeholder = {
                    Text(
                        "Ingresa el nombre del concierto",
                        fontWeight = FontWeight.Medium,
                        fontFamily = InterFontFamily,
                        fontSize = 16.sp,
                        color = Color(0xFF8E8787)
                    )
                },
...
            Row(horizontalArrangement = Arrangement.spacedBy(8.dp)) {
                OutlinedTextField(
                    value = day,
                    onValueChange = { day = it },
                    placeholder = {
                        Text(
                            "DD",
                            color = Color(0xFF8E8787),
                            fontWeight = FontWeight.Medium,
                            fontFamily = InterFontFamily,
                            fontSize = 16.sp
                        )
                    },
...
                )
                OutlinedTextField(
                    value = month,
                    onValueChange = { month = it },
                    placeholder = {
                        Text(
                            "MM",
                            color = Color(0xFF8E8787),
                            fontWeight = FontWeight.Medium,
                            fontFamily = InterFontFamily,
                            fontSize = 16.sp
                        )
                    },
...
                )
                OutlinedTextField(
                    value = year,
                    onValueChange = { year = it },
                    placeholder = {
                        Text(
                            "YYYY",
                            color = Color(0xFF8E8787),
                            fontWeight = FontWeight.Medium,
                            fontFamily = InterFontFamily,
                            fontSize = 16.sp
                        )
                    },
...
                OutlinedTextField(
                    value = genre,
                    onValueChange = {},
                    readOnly = true,
                    placeholder = {
                        Text(
                            "Selecciona el género musical",
                            color = Color(0xFF8E8787),
                            fontWeight = FontWeight.Medium,
                            fontFamily = InterFontFamily,
                            fontSize = 16.sp
                        )
                    },
...
            )
            OutlinedTextField(
                value = description,
                onValueChange = { description = it },
                placeholder = {
                    Text(
                        "Ingresa una descripción del evento",
                        color = Color(0xFF8E8787),
                        fontWeight = FontWeight.Medium,
                        fontFamily = InterFontFamily,
                        fontSize = 16.sp
                    )
                },
...
                OutlinedTextField(
                    value = platformName,
                    onValueChange = {},
                    readOnly = true,
                    placeholder = {
                        Text(
                            "Selecciona la plataforma de venta",
                            color = Color(0xFF8E8787),
                            fontWeight = FontWeight.Medium,
                            fontFamily = InterFontFamily,
                            fontSize = 16.sp
                        )
                    },
...
            )
            OutlinedTextField(
                value = venueName,
                onValueChange = { venueName = it },
                placeholder = {
                    Text(
                        "Ingresa el nombre del recinto",
                        color = Color(0xFF8E8787),
                        fontWeight = FontWeight.Medium,
                        fontFamily = InterFontFamily,
                        fontSize = 16.sp
                    )
                },
...
            )
            OutlinedTextField(
                value = venueAddress,
                onValueChange = { venueAddress = it },
                placeholder = {
                    Text(
                        "Ingresa la dirección completa",
                        color = Color(0xFF8E8787),
                        fontWeight = FontWeight.Medium,
                        fontFamily = InterFontFamily,
                        fontSize = 16.sp
                    )
                },
...
                if (it.isEmpty() || it.all { char -> char.isDigit() }) {
                    venueCapacity = it
                    }
                },
                placeholder = {
                 Text(
                 "Capacidad del recinto",
                  color = Color(0xFF8E8787),
                  fontWeight = FontWeight.Medium,
                  fontFamily = InterFontFamily,
                  fontSize = 16.sp
                    )
                },
...
                            userId = userId
                        )

                        concertVM.createConcert(concertRequest) { success ->
                            coroutineScope.launch {
                                if (success) {
                                    snackbarHostState.showSnackbar("Concierto creado correctamente 🎉")
                                    navController.popBackStack()
                                } else {
                                    snackbarHostState.showSnackbar("Error al crear concierto. Verifica los datos.")
                                }
                            }
                        }
...
                },
                colors = ButtonDefaults.buttonColors(containerColor = Color(0xFF5C0F1A)),
                shape = RoundedCornerShape(12.dp),
                modifier = Modifier.fillMaxWidth().height(50.dp)
            ) {
                Text(
                    "Crear",
                    color = Color.White,
                    fontWeight = FontWeight.Bold,
                    fontFamily = InterFontFamily,
                    fontSize = 20.sp
                )
            }
...
